--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -20,7 +20,7 @@ FROM openjdk:22-jdk
 RUN mkdir /app
 
 #--The * in *.jar means wildcard
-COPY --from=-builder /home/gradle/src/build/libs/*.jar /app/product-service.jar
+COPY --from=builder /home/gradle/src/build/libs/*.jar /app/product-service.jar
 
 #DEFAULTS
 ENV MONGO_DB_USERNAME=admin \
